# ros2-multi-robot-autonomous-mapping

./: .gitignore  README.md  Technical_Manual.md
src/multi_robot/: CMakeLists.txt  package.xml
src/multi_robot/config/: ekf.yaml  ekf0.yaml  ekf1.yaml  ekf2.yaml  nav2_params.yaml  robot1_ekf.yaml  robot2_ekf.yaml  slam_config.yaml  tb1_ekf.yaml  tb2_ekf.yaml
src/multi_robot/launch/: gazebo_multirobot_mapping_with_nav2.launch.py  gazebo_multirobot_navigation.launch.py  globals.py
src/multi_robot/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
src/multi_robot/maps/: empty_square_world.pgm  empty_square_world.yaml  empty_world_01_merged.pgm  empty_world_01_merged.yaml  merged_map.pgm  merged_map.yaml  myworld_02_merged.pgm  myworld_02_merged.yaml  myworld_merged.pgm  myworld_merged.yaml
src/multi_robot/models/my_robot3/: model.config  model.sdf
src/multi_robot/params/: nav2_params2.yaml  nav2_params3.yaml  nav2_params_multi.yaml  nav2_params_robot1.yaml  nav2_params_robot2.yaml  nav2_params_tb1_0.yaml  nav2_params_tb2_0.yaml  nav2_params_tb3_0.yaml  nav2_params_tb4_0.yaml  nav2_params_tb5_0.yaml  nav2_params_tb6_0.yaml
src/multi_robot/rviz/: 4robots.rviz  map_multi.rviz  multi_nav2_default_view2.rviz  multi_nav2_default_view_2robot.rviz  multi_nav2_default_view_2robot00.rviz  multi_nav2_default_view_2robot2.rviz  multi_nav2_default_view_2robot3.rviz  multi_robot_maping_tb1.rviz  multi_robot_maping_tb2.rviz  multi_robot_maping_tb4.rviz  multi_robot_maping_tb5.rviz  multi_robot_maping_tb6.rviz  ro.rviz  sample.rviz  testing_single_nav2_params_tb1_0.rviz
src/multi_robot/urdf/: my_robot.urdf  my_robot2.urdf  my_robot3.urdf  tb3_waffle.urdf  turtlebot3_waffle.urdf
src/multi_robot/worlds/: world_01.world
src/rviz2-panel/: CMakeLists.txt  package.xml
src/rviz2-panel/launch/: kato_rviz.launch.py
src/rviz2-panel/rviz2/: multi_robot_maping_tb3.rviz  multi_robot_maping_tb6.rviz
(+77 files in other folders)
